Revision history for Dist::Zilla::MintingProfile::Author::Caelum

{{$NEXT}}

0.04 2012-12-27 00:39:06
    - generate correct meta repo links for GitHub::Create
    - fix meta repo links for this dist itself

0.03 2012-12-26 10:00:24
    - add Git::Init and GitHub::Create (with a prompt), docs

0.02 2012-12-26 06:49:59
    - expand SYNOPSIS

0.01 2012-12-26 06:28:54
    - first release