@@ -21,4 +21,5 @@ content = {{$dist->name}}-*
 [Git::Init]
 
 [GitHub::Create]
+repo   = {{ lc $dist->name }}
 prompt = 1
