@@ -9,5 +9,3 @@ dist            = {{$dist->name}}
 bugtracker      = rt
 authority       = cpan:{{$dist->stash_named('%PAUSE')->username}}
 github_user     = {{chomp($_ = `git config --get github.user`); $_}}
-repository_web  = http://github.com/{{chomp($_ = `git config --get github.user`); $_}}/{{$dist->name}}
-repository_url  = git://github.com/{{chomp($_ = `git config --get github.user`); $_}}/{{$dist->name}}.git
