@@ -1,6 +1,7 @@
 Revision history for Dist::Zilla::MintingProfile::Author::Caelum
 
 {{$NEXT}}
+    - lowercase github repo name (now uses @AVAR defaults for github repo)
 
 0.04 2012-12-27 00:39:06
     - generate correct meta repo links for GitHub::Create
